# challenge

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  workspace.yaml
github_pipeline/: assets.py  definitions.py  io_managers.py  ops.py  resources.py  utils.py
